# meilisearch-admin

./: .gitignore  Dockerfile  README.md  README_zh.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: app.py
backend/api/: __init__.py  index_api.py  key_api.py  project_api.py  task_api.py
backend/models/: __init__.py  database.py  project.py
backend/services/: __init__.py  meilisearch_service.py  project_service.py
backend/utils/: __init__.py  config.py
config/: config.yaml
docker/: nginx.conf  supervisord.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue
frontend/src/api/: http.js  index.js
frontend/src/assets/: main.css
frontend/src/components/common/: CellValue.vue  Empty.vue  Loading.vue  Modal.vue
frontend/src/components/layout/: Header.vue  SearchLayout.vue  Sidebar.vue
frontend/src/router/: index.js
frontend/src/store/: index.js  project.js  settings.js
frontend/src/views/: Home.vue  IndexDetail.vue  ProjectDetail.vue  Projects.vue
frontend/src/views/index/: Attributes.vue  Dictionary.vue  Embedders.vue  Faceting.vue  General.vue  Pagination.vue  PrefixSearch.vue  RankingRules.vue  Search.vue  SearchCutoff.vue  Separators.vue  StopWords.vue  Synonyms.vue  TypoTolerance.vue
frontend/src/views/project/: Indexes.vue  Keys.vue  Search.vue  Settings.vue  Tasks.vue
